force-app/main/default/objects/SSP_HealthInsuranceFacilityType__c/SSP_HealthInsuranceFacilityType__c.object-meta.xml
<CustomObject>
    <description>Stores details about facility type availed under an insurance policy.</description>
    <label>SSP HealthInsuranceFacilityType</label>
    <nameField>
        
        <displayFormat>HIF-{00000000}</displayFormat>
        
        <label>SSP_HealthInsuranceFacilityType Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>SSP HealthInsuranceFacilityTypes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>