force-app/main/default/objects/SSP_HealthInsuranceFacilityType__c/fields/CoverageEndDate__c.field-meta.xml
<CustomField>
    <fullName>CoverageEndDate__c</fullName>
    <description>Used to capture Coverage End Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverage End Date</label>
    <type>Date</type>
</CustomField>