force-app/main/default/objects/SSP_HealthInsuranceFacilityType__c/fields/CoverageStartDate__c.field-meta.xml
<CustomField>
    <fullName>CoverageStartDate__c</fullName>
    <description>Used to capture Coverage Start Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverage Start Date</label>
    <type>Date</type>
</CustomField>