force-app/main/default/objects/SSP_HealthInsuranceFacilityType__c/fields/DCId__c.field-meta.xml
<CustomField>
    <fullName>DCId__c</fullName>
    <description>This field is used to identify the unique Health Insurance Facility Type for an external system</description>
    <externalId>true</externalId>
    <label>DCId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>