force-app/main/default/objects/SSP_HealthInsuranceFacilityType__c/fields/DCInsuranceCoveredIndivId__c.field-meta.xml
<CustomField>
    <fullName>DCInsuranceCoveredIndivId__c</fullName>
    <description>This field is used to identify the unique insurance covered Individual for a Health Insurance Facility type</description>
    <externalId>true</externalId>
    <label>DCInsuranceCoveredIndivId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>