force-app/main/default/objects/SSP_HealthInsuranceFacilityType__c/fields/EndReason__c.field-meta.xml
<CustomField>
    <fullName>EndReason__c</fullName>
    <description>This field is used to store End Reason for a Health Insurance Facility type</description>
    <label>End Reason</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>InsuranceEndReason</valueSetName>
        
        </valueSet>
</CustomField>