force-app/main/default/objects/SSP_HealthInsuranceFacilityType__c/fields/FacilityType__c.field-meta.xml
<CustomField>
    <fullName>FacilityType__c</fullName>
    <description>Used to store Health Insurance facility types</description>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>TypeOfFacility</valueSetName>
        
        </valueSet>
</CustomField>