force-app/main/default/objects/SSP_HealthInsuranceFacilityType__c/fields/OtherReason__c.field-meta.xml
<CustomField>
    <fullName>OtherReason__c</fullName>
    <description>This field is used to store Other Reason for a Health Insurance Facility type</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>