force-app/main/default/objects/SSP_HealthInsuranceFacilityType__c/fields/SSP_InsuranceCoveredIndiv__c.field-meta.xml
<CustomField>
    <fullName>SSP_InsuranceCoveredIndiv__c</fullName>
    <description>This field is used to indicate Insurance Covered Individual for a Health Insurance Facility type</description>
    <label>SSP_InsuranceCoveredIndiv</label>
    <referenceTo>SSP_InsuranceCoveredIndiv__c</referenceTo>
    <relationshipName>SSP_HealthInsuranceFacilityTypes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>