force-app/main/default/objects/SSP_HealthInsuranceFacilityType__c/recordTypes/HealthInsuranceFacilityType.recordType-meta.xml
<RecordType>
    <fullName>HealthInsuranceFacilityType</fullName>
    <active>true</active>
    <description>This is used to store records of Insurance Facility type.</description>
    <label>Health Insurance Facility Type</label>
</RecordType>